--- a/memories.html
+++ b/memories.html
@@ -52,16 +52,16 @@
     <h1 style="text-align:center; padding-top:30px;">Our Cute Memories 💞</h1>
     <div class="gallery">
         <div class="pic"
-            style="background-image:url('assets/IMG-20250824-WA0101[1].jpg');background-size:cover;background-position:center;">
+            style="background-image:url('/IMG-20250824-WA0101[1].jpg');background-size:cover;background-position:center;">
         </div>
         <div class="pic"
-            style="background-image:url('assets/IMG-20250930-WA0130[1].jpg');background-size:cover;background-position:center;">
+            style="background-image:url('/IMG-20250930-WA0130[1].jpg');background-size:cover;background-position:center;">
         </div>
         <div class="pic"
-            style="background-image:url('assets/IMG-20251118-WA0002[1].jpg');background-size:cover;background-position:center;">
+            style="background-image:url('/IMG-20251118-WA0002[1].jpg');background-size:cover;background-position:center;">
         </div>
         <div class="pic"
-            style="background-image:url('assets/IMG-20251118-WA0010[1].jpg');background-size:cover;background-position:center;">
+            style="background-image:url('IMG-20251118-WA0010[1].jpg');background-size:cover;background-position:center;">
         </div>
     </div>
 
@@ -134,5 +134,6 @@
     <script src="script.js"></script>
 
 </body>
+
 
 </html>
