--- a/letter.html
+++ b/letter.html
@@ -11,7 +11,7 @@
       <div style="display:flex;align-items:center;gap:12px;justify-content:center">
         <div style="width:72px;height:72px;border-radius:12px;overflow:hidden;box-shadow:0 8px 18px rgba(0,0,0,0.06)">
           <!-- placeholder image or personal -->
-          <img src="assets/IMG-20251118-WA0004[1].jpg" onerror="this.style.display='none'" style="width:100%;height:100%;object-fit:cover">
+          <img src="/IMG-20251118-WA0004[1].jpg" onerror="this.style.display='none'" style="width:100%;height:100%;object-fit:cover">
         </div>
       </div>
       <h2 class="hello">A Note for You 💖</h2>
@@ -32,3 +32,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
